--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Movie mania</title>
+    <title>Moviemania</title>
   </head>
   <body>
-    <div id="root">not rendered</div>
+    <div id="root">moviemania</div>
 
     <script src="../index.js"></script>
   </body>
